--- a/example/flutter_ex/pubspec.yaml
+++ b/example/flutter_ex/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: none
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
   flutter:
@@ -13,8 +13,8 @@ dependencies:
   epubx:
     path: ../../
   # To get the epub from the internet
-  http:  ^0.13.4
-  image: ^3.0.8
+  http: ^0.13.5
+  image: ^4.0.16
 
 dev_dependencies:
   flutter_test:
