--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,23 @@ issue_tracker: https://github.com/rbcprolabs/epubx.dart
 version: 3.0.0
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.15.0 <3.0.0"
+#  sdk: '>=2.19.4 <3.0.0'
 
 dependencies:
-  archive: ^3.1.6
-  quiver: ^3.0.1+1
-  xml: ^5.3.1
-  image: ^3.0.8
-  collection: ^1.15.0
+  archive: ^3.3.7
+  quiver: ^3.2.1
+#  xml: ^6.3.0
+  xml: 6.0.1
+  image: ^4.0.16
+  collection: 1.17.0
+
+
+#dependency_overrides:
+#  meta: ^1.9.1
+
 
 dev_dependencies:
-  test: ^1.16.7
-  path: ^1.8.0
-  pedantic: ^1.11.0
+  test: ^1.24.2
+  path: ^1.8.3
+  lints: ^2.0.1
