--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,20 @@ environment:
   sdk: ">=2.15.0 <3.0.0"
 #  sdk: '>=2.19.4 <3.0.0'
 
+#dependencies:
+#  archive: ^3.3.7
+#  quiver: ^3.2.1
+##  xml: ^6.3.0
+#  xml: 6.0.1
+#  image: ^4.0.16
+#  collection: 1.17.0
+
 dependencies:
-  archive: ^3.3.7
-  quiver: ^3.2.1
-#  xml: ^6.3.0
-  xml: 6.0.1
-  image: ^4.0.16
-  collection: 1.17.0
+  archive: ^3.1.2
+  quiver: ^3.0.0
+  xml: ^6.1.0
+  image: ^3.0.2
+  collection: ^1.15.0
 
 
 #dependency_overrides:
